--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.1.2",
+    "react-staged": "^0.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,6 +30,13 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
+    "typescript": "^3.6.3"
   }
 }
