--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^3.1.2",
-    "react-staged": "^0.4.1"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1",
+    "react-staged": "0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,13 +30,13 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^12.7.8",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "^16.9.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
-    "typescript": "^3.6.3"
+    "@types/node": "14.0.27",
+    "@types/react": "16.9.44",
+    "@types/react-dom": "16.9.8",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "node-sass": "4.14.1",
+    "prettier": "2.0.5",
+    "typescript": "3.9.7"
   }
 }
